# routes/index.js
@@ -1,12 +1,11 @@
-
 const express = require('express');
 const passport = require('passport');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-//router.get('/', (req, res) => {res.send('Welcome!, Have fun with Books')});
 
-router.use('/books', require('./books'));
+router.use('/recipes', require('./recipes'));
+router.use('/users', require('./users'));
 
 router.get('/login', passport.authenticate('github'), (res,req) => {});
 
