# swagger.json
@@ -1,27 +1,38 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Books API",
-    "description": "API for managing book",
+    "title": "Receipes API",
+    "description": "API for managing Recipes",
     "version": "1.0.0"
   },
-  "host": "https://cse341-project2-52up.onrender.com/",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
-    "/": {
+    "/login": {
       "get": {
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         }
       }
     },
-    "/books/": {
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/recipes/": {
       "get": {
         "description": "",
         "responses": {
@@ -45,22 +56,182 @@
                 "title": {
                   "example": "any"
                 },
-                "author": {
+                "ingredients": {
                   "example": "any"
                 },
-                "isbn": {
+                "instructions": {
                   "example": "any"
                 },
-                "publishedDate": {
+                "cookingTime": {
                   "example": "any"
                 },
-                "genre": {
+                "difficulty": {
                   "example": "any"
                 },
-                "pages": {
+                "tags": {
                   "example": "any"
                 },
-                "language": {
+                "imageUrl": {
+                  "example": "any"
+                },
+                "createdBy": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/recipes/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "ingredients": {
+                  "example": "any"
+                },
+                "instructions": {
+                  "example": "any"
+                },
+                "cookingTime": {
+                  "example": "any"
+                },
+                "difficulty": {
+                  "example": "any"
+                },
+                "tags": {
+                  "example": "any"
+                },
+                "imageUrl": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Name": {
+                  "example": "any"
+                },
+                "Surname": {
+                  "example": "any"
+                },
+                "Email": {
+                  "example": "any"
+                },
+                "Country": {
                   "example": "any"
                 }
               }
@@ -77,7 +248,7 @@
         }
       }
     },
-    "/books/{id}": {
+    "/users/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -115,25 +286,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "Name": {
                   "example": "any"
                 },
-                "author": {
+                "Surname": {
                   "example": "any"
                 },
-                "isbn": {
+                "Email": {
                   "example": "any"
                 },
-                "publishedDate": {
-                  "example": "any"
-                },
-                "genre": {
-                  "example": "any"
-                },
-                "pages": {
-                  "example": "any"
-                },
-                "language": {
+                "Country": {
                   "example": "any"
                 }
               }
